# data

./: Cargo.toml  README.md
.github/workflows/: collect.yml
cmc_data/: 2019-10-1.json  2019-10-10.json  2019-10-11.json  2019-10-12.json  2019-10-13.json  2019-10-14.json  2019-10-15.json  2019-10-16.json  2019-10-17.json  2019-10-18.json  2019-10-19.json  2019-10-2.json  2019-10-20.json  2019-10-21.json  2019-10-22.json  2019-10-23.json  2019-10-24.json  2019-10-25.json  2019-10-26.json  2019-10-27.json  2019-10-28.json  2019-10-29.json  2019-10-3.json  2019-10-30.json  2019-10-31.json  2019-10-4.json  2019-10-5.json  2019-10-6.json  2019-10-7.json  2019-10-8.json  2019-10-9.json  2019-11-1.json  2019-11-10.json  2019-11-11.json  2019-11-12.json  2019-11-13.json  2019-11-14.json  2019-11-15.json  2019-11-16.json  2019-11-17.json  (+564 more)
data/: 2019-10-1.json  2019-10-10.json  2019-10-11.json  2019-10-12.json  2019-10-13.json  2019-10-14.json  2019-10-15.json  2019-10-16.json  2019-10-17.json  2019-10-18.json  2019-10-19.json  2019-10-2.json  2019-10-20.json  2019-10-21.json  2019-10-22.json  2019-10-23.json  2019-10-24.json  2019-10-25.json  2019-10-26.json  2019-10-27.json  2019-10-28.json  2019-10-29.json  2019-10-3.json  2019-10-30.json  2019-10-31.json  2019-10-4.json  2019-10-5.json  2019-10-6.json  2019-10-7.json  2019-10-8.json  2019-10-9.json  2019-11-1.json  2019-11-10.json  2019-11-11.json  2019-11-12.json  2019-11-13.json  2019-11-14.json  2019-11-15.json  2019-11-16.json  2019-11-17.json  (+913 more)
src/: historic_data.rs  main.rs  processing.rs
