[package]
name = "data"
version = "0.1.0"
authors = ["Christian Hansen <64793a1a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
curl =  "0.4.38"
chrono = "0.4.0"